--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/belle
+spring.datasource.username=postgres
+spring.datasource.password=1234
+server.port=8080
+
+logging.level.org.springframework.web=DEBUG
+# Hibernate properties
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.show-sql = false
+spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = create-drop
