--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,13 @@ spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = create-drop
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=asdason1122@gmail.com
+spring.mail.password=tfdllfrzbqnejxllaa
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
